Avoid @@ in verbatim etc that show up incorrectly in source3.pdf
A few other minor documentation cleanups

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2702,8 +2702,8 @@
 %   \cs{@@_split_function:NN} is supposed to be a function
 %   taking three variables, one for name, one for signature, and one
 %   for the boolean.  For example,
-%   |\@@_split_function:NN \foo_bar:cnx \use_i:nnn| as input
-%   becomes |\use_i:nnn {foo_bar} {cnx} \c_true_bool|.
+%   \cs{@@_split_function:NN} \cs[no-index]{foo_bar:cnx} \cs{use_i:nnn} as input
+%   becomes \cs{use_i:nnn} |{foo_bar}| |{cnx}| \cs{c_true_bool}.
 %
 %   We cannot use |:| directly as it has the wrong category code so
 %   an |x|-type expansion is used to force the conversion.
