--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -76,7 +76,7 @@
 \cs_new_eq:NN \@@_int_eval_end: \scan_stop:
 \cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
 \cs_new_eq:NN \@@_int_value:w \tex_number:D
-%     \end{macrocode}
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Internal representation}
@@ -526,7 +526,7 @@
 %
 % \begin{macro}[EXP]{\@@_if_type_fp:NTwFw}
 %   Used as \cs{@@_if_type_fp:NTwFw} \meta{marker} \Arg{true code}
-%   \cs{s__fp} \Arg{false code} \cs{q_stop}, this test whether the
+%   \cs{s_@@} \Arg{false code} \cs{q_stop}, this test whether the
 %   \meta{marker} is \cs{s_@@} or not and runs the appropriate
 %   \meta{code}.  The very unusual syntax is for optimization purposes
 %   as that function is used for all floating point operations.
@@ -686,7 +686,7 @@
 % \begin{verbatim}
 %   \cs_new:Npn \pack:NNNNNw #1 #2#3#4#5 #6; { {#2#3#4#5} {#6} }
 %   \exp_after:wN \pack:NNNNNw
-%     \@@_int_value:w \@@_int_eval:w 1 0000 0000 + #1 ;
+%     \__fp_int_value:w \__fp_int_eval:w 1 0000 0000 + #1 ;
 % \end{verbatim}
 % The idea is that adding $10^8$ to the number ensures that it has
 % exactly $9$ digits, and can then easily find which digits correspond
@@ -701,19 +701,19 @@
 % 6677\,8899$.  With simplified names, we would do
 % \begin{verbatim}
 %   \exp_after:wN \post_processing:w
-%   \@@_int_value:w \@@_int_eval:w - 5 0000
+%   \__fp_int_value:w \__fp_int_eval:w - 5 0000
 %     \exp_after:wN \pack:NNNNNw
-%     \@@_int_value:w \@@_int_eval:w 4 9995 0000
+%     \__fp_int_value:w \__fp_int_eval:w 4 9995 0000
 %       + 12345 * 6677
 %       \exp_after:wN \pack:NNNNNw
-%       \@@_int_value:w \@@_int_eval:w 5 0000 0000
+%       \__fp_int_value:w \__fp_int_eval:w 5 0000 0000
 %         + 12345 * 8899 ;
 % \end{verbatim}
-% The \cs{exp_after:wN} triggers |\@@_int_value:w \@@_int_eval:w|, which
+% The \cs{exp_after:wN} triggers \cs{@@_int_value:w} \cs{@@_int_eval:w}, which
 % starts a first computation, whose initial value is $- 5\,0000$ (the
 % \enquote{leading shift}).  In that computation appears an
 % \cs{exp_after:wN}, which triggers the nested computation
-% |\@@_int_value:w \@@_int_eval:w| with starting value $4\,9995\,0000$ (the
+% \cs{@@_int_value:w} \cs{@@_int_eval:w} with starting value $4\,9995\,0000$ (the
 % \enquote{middle shift}).  That, in turn, expands \cs{exp_after:wN}
 % which triggers the third computation.  The third computation's value
 % is $5\,0000\,0000 + 12345 \times 8899$, which has $9$ digits. Adding
@@ -1041,12 +1041,12 @@
 % treated using a few standard functions which we define now.  A typical
 % use context for those functions would be
 % \begin{syntax}
-%   |\if_case:w| \meta{integer} |\exp_stop_f:|
-%   |     \@@_case_return_o:Nw| \meta{fp var}
-%   |\or: \@@_case_use:nw| \Arg{some computation}
-%   |\or: \@@_case_return_same_o:w|
-%   |\or: \@@_case_return:nw| \Arg{something}
-%   |\fi:|
+%   \cs{if_case:w} \meta{integer} \cs{exp_stop_f:}
+%   |     |\cs{@@_case_return_o:Nw} \meta{fp var}
+%   \cs{or:} \cs{@@_case_use:nw} \Arg{some computation}
+%   \cs{or:} \cs{@@_case_return_same_o:w}
+%   \cs{or:} \cs{@@_case_return:nw} \Arg{something}
+%   \cs{fi:}
 %   \meta{junk}
 %   \meta{floating point}
 % \end{syntax}
