--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2127,7 +2127,7 @@
 %     \__kernel_msg_expandable_error:nn
 %   }
 %   The command built from the csname
-%   |\c_@@_text_prefix_tl LaTeX / #1 / #2|
+%   \cs{c_@@_text_prefix_tl} |LaTeX / #1 / #2|
 %   takes four arguments and builds the error text, which is fed to
 %   \cs{@@_expandable_error:n}.
 %    \begin{macrocode}
