--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2152,7 +2152,7 @@
 \cs_new:Npn \@@_rand:nNn #1#2#3 { \exp_not:n { {#1} {#3} } }
 \cs_new:Npn \@@_rand:NN #1#2
   {
-    \prop_if_empty:NTF #2 { }
+    \prop_if_empty:NF #2
       {
         \exp_after:wN \@@_rand_item:Nw \exp_after:wN #1
         \__int_value:w \int_rand:nn { 1 } { \prop_count:N #2 } #2
