--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2140,34 +2140,39 @@
 %
 % \begin{macro}[EXP]
 %   {\prop_rand_key_value:N, \prop_rand_key_value:c}
-% \begin{macro}[EXP]{\@@_rand:NN, \@@_rand_item:Nw}
+% \begin{macro}[EXP]{\@@_rand_key_item:nN, \@@_rand_key_item:fN}
+% \begin{macro}[EXP]{\@@_rand_key_item:nn}
+% \begin{macro}[EXP]{\@@_rand_item:w}
 %   Contrarily to |clist|, |seq| and |tl|, there is no function to get
 %   an item of a |prop| given an integer between $1$ and the number of
 %   items, so we write the appropriate code.  There is no bounds
-%   checking because \cs{int_rand:nn} is always within bounds.  At the
-%   end, leave either the key |#3| or the value |#4| in the input
-%   stream.
+%   checking because \cs{int_rand:nn} is always within bounds.
 %    \begin{macrocode}
-\cs_new:Npn \prop_rand_key_value:N { \@@_rand:NN \@@_rand:nNn }
-\cs_new:Npn \@@_rand:nNn #1#2#3 { \exp_not:n { {#1} {#3} } }
-\cs_new:Npn \@@_rand:NN #1#2
+\cs_new:Npn \prop_rand_key_value:N #1
   {
-    \prop_if_empty:NF #2
+    \prop_if_empty:NF #1
       {
-        \exp_after:wN \@@_rand_item:Nw \exp_after:wN #1
-        \__int_value:w \int_rand:nn { 1 } { \prop_count:N #2 } #2
-        \q_stop
+        \@@_rand_key_item:fN
+          { \int_eval:n { \int_rand:nn { 1 } { \prop_count:N #1 } } }
+          #1
       }
   }
-\cs_new:Npn \@@_rand_item:Nw #1#2 \s_@@ \@@_pair:wn #3 \s_@@ #4
-  {
-    \int_compare:nNnF {#2} > 1
-      { \use_i_delimit_by_q_stop:nw { #1 {#3} \exp_not:n {#4} } }
-    \exp_after:wN \@@_rand_item:Nw \exp_after:wN #1
-    \__int_value:w \int_eval:n { #2 - 1 } \s_@@
-  }
 \cs_generate_variant:Nn \prop_rand_key_value:N { c }
+\cs_new:Npn \@@_rand_key_item:nN #1#2
+  { \exp_after:wN \@@_rand_key_item:nn \exp_after:wN {#2} {#1} }
+\cs_generate_variant:Nn \@@_rand_key_item:nN { f }
+\cs_new:Npn \@@_rand_key_item:nn #1#2
+  { \@@_rand_item:w #2 #1 \q_stop }
+\cs_new:Npn \@@_rand_item:w #1 \s_@@ \@@_pair:wn #2 \s_@@ #3
+  {
+    \int_compare:nNnF {#1} > 1
+      { \use_i_delimit_by_q_stop:nw { \exp_not:n { {#2} {#3} } } }
+    \exp_after:wN \@@_rand_item:w
+    \__int_value:w \int_eval:n { #1 - 1 } \s_@@
+  }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
