Make \prg_break_point:Nn public
Also \prg_map_break:Nn

Other aspects of this code still to be addressed:
likely to make them internal to each module

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2123,7 +2123,7 @@
   {
     \exp_last_unbraced:Nno \@@_map_tokens:nwwn {#2} #1
       \@@_pair:wn \q_recursion_tail \s_@@ { }
-    \__prg_break_point:Nn \prop_map_break: { }
+    \prg_break_point:Nn \prop_map_break: { }
   }
 \cs_new:Npn \@@_map_tokens:nwwn #1#2 \@@_pair:wn #3 \s_@@ #4
   {
