--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1835,7 +1835,7 @@
 %   The approach here is to build a function, with a global integer
 %   required to make the nesting safe (as seen in other in line
 %   functions), and map that function using \cs{int_step_function:nnnN}.
-%   We put a \cs{__prg_break_point:Nn} so that \texttt{map_break}
+%   We put a \cs{prg_break_point:Nn} so that \texttt{map_break}
 %   functions from other modules correctly decrement \cs{g__prg_map_int}
 %   before looking for their own break point.  The first argument is
 %   \cs{scan_stop:}, so that no breaking function recognizes this break
@@ -1864,7 +1864,7 @@
   {
     #1 #2 ##1 {#6}
     \int_step_function:nnnN {#3} {#4} {#5} #2
-    \__prg_break_point:Nn \scan_stop: { \int_gdecr:N \g__prg_map_int }
+    \prg_break_point:Nn \scan_stop: { \int_gdecr:N \g__prg_map_int }
   }
 %    \end{macrocode}
 % \end{macro}
