--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -931,7 +931,7 @@
     \exp_after:wN #1
       \g_@@_result_tl
       \s__tl { ? \tl_map_break: } \s__tl
-    \__prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__prg_map_int }
+    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__prg_map_int }
   }
 %    \end{macrocode}
 % \end{macro}
