--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1117,7 +1117,7 @@
   {
     \exp_last_unbraced:NNo \@@_map_function:Nwwn #2 #1
       \@@_pair:wn \q_recursion_tail \s_@@ { }
-    \__prg_break_point:Nn \prop_map_break: { }
+    \prg_break_point:Nn \prop_map_break: { }
   }
 \cs_new:Npn \@@_map_function:Nwwn #1#2 \@@_pair:wn #3 \s_@@ #4
   {
@@ -1149,7 +1149,7 @@
     \int_gincr:N \g__prg_map_int
     \cs_gset_protected:Npn \@@_pair:wn ##1 \s_@@ ##2 {#2}
     #1
-    \__prg_break_point:Nn \prop_map_break:
+    \prg_break_point:Nn \prop_map_break:
       {
         \int_gdecr:N \g__prg_map_int
         \cs_gset_eq:Nc \@@_pair:wn
@@ -1162,12 +1162,12 @@
 %
 % \begin{macro}[tested = m3prop003]{\prop_map_break:}
 % \begin{macro}[tested = m3prop003]{\prop_map_break:n}
-%   The break statements are based on the general \cs{__prg_map_break:Nn}.
+%   The break statements are based on the general \cs{prg_map_break:Nn}.
 %    \begin{macrocode}
 \cs_new:Npn \prop_map_break:
-  { \__prg_map_break:Nn \prop_map_break: { } }
+  { \prg_map_break:Nn \prop_map_break: { } }
 \cs_new:Npn \prop_map_break:n
-  { \__prg_map_break:Nn \prop_map_break: }
+  { \prg_map_break:Nn \prop_map_break: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
