Make \int_value:w public (again)
This is sufficiently widely-used that we can't hope
to keep it 'team only', and don't want loads of copies
of the primitive.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1341,7 +1341,7 @@
 %   \begin{quote}
 %     \cs{__kernel_patch_args:nNNpn} |{ { (#1) } }| \\
 %     \cs{cs_new:Npn} \cs{int_eval:n} |#1| \\
-%     ~~|{ \__int_value:w \__int_eval:w #1 \__int_eval_end: }|
+%     ~~|{ \int_value:w \__int_eval:w #1 \__int_eval_end: }|
 %   \end{quote}
 %   would replace |#1| by |(#1)| in the definition of \cs{int_eval:n} when
 %   debugging is enabled.  This fails if the \meta{code} contains~|##|.
@@ -2038,7 +2038,7 @@
           {
             \tex_romannumeral:D - 0
             \exp_after:wN \use_none:n
-            \__int_value:w #3 #2 #1 \scan_stop:
+            \int_value:w #3 #2 #1 \scan_stop:
           }
           {
             \__kernel_msg_expandable_error:nnnn
@@ -2659,7 +2659,7 @@
 %   \cs{token_to_str:N}, and stops the \cs{tex_romannumeral:D} with \cs{c_zero}.
 %   The last case is that the escape character is itself a space. In this
 %   case, the \cs{if:w} test is true, and the auxiliary \cs{@@_to_str:w}
-%   comes into play, inserting |-\__int_value:w|, which expands \cs{c_zero}
+%   comes into play, inserting |-\int_value:w|, which expands \cs{c_zero}
 %   to the character |0|. The initial \cs{tex_romannumeral:D} then sees
 %   |0|, which is not a terminated number, followed by the escape character,
 %   a space, which is removed, terminating the expansion of
@@ -2682,7 +2682,7 @@
   }
 \cs_set:Npn \@@_to_str:N #1 { \c_zero }
 \cs_set:Npn \@@_to_str:w #1 \@@_to_str:N
-  { - \__int_value:w \fi: \exp_after:wN \c_zero }
+  { - \int_value:w \fi: \exp_after:wN \c_zero }
 %    \end{macrocode}
 %   If speed is a concern we could use \tn{csstring} in \LuaTeX{}.  For
 %   the empty csname that primitive gives an empty result while the
