--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2168,7 +2168,7 @@
     \int_compare:nNnF {#1} > 1
       { \use_i_delimit_by_q_stop:nw { \exp_not:n { {#2} {#3} } } }
     \exp_after:wN \@@_rand_item:w
-    \__int_value:w \int_eval:n { #1 - 1 } \s_@@
+    \int_value:w \int_eval:n { #1 - 1 } \s_@@
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4155,14 +4155,14 @@
       \exp_after:wN { \exp_after:wN }
     \fi:
     \exp_after:wN #3
-    \__int_value:w \__int_eval:w #2 - #1 \exp_after:wN ;
+    \int_value:w \__int_eval:w #2 - #1 \exp_after:wN ;
     \exp_after:wN { \exp:w \@@_range_skip:w #1 ; { } #4 }
   }
 \cs_new:Npn \@@_range_skip:w #1 ; #2
   {
     \if_int_compare:w #1 > 0 \exp_stop_f:
       \exp_after:wN \@@_range_skip:w
-      \__int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
+      \int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
     \else:
       \exp_after:wN \exp_end:
     \fi:
@@ -4175,7 +4175,7 @@
   {
     \if_int_compare:w #1 > 1 \exp_stop_f:
       \exp_after:wN \@@_range_collect_braced:w
-      \__int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
+      \int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
     \fi:
     { #2 {#3} }
   }
@@ -4183,7 +4183,7 @@
   {
     \if_int_compare:w #1 > 1 \exp_stop_f:
       \exp_after:wN \@@_range_collect_unbraced:w
-      \__int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
+      \int_value:w \__int_eval:w #1 - 1 \exp_after:wN ;
     \fi:
     { #2 #3 }
   }
