--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -204,7 +204,7 @@
     \if_cs_exist:w flag~#2~#1 \cs_end:
       \cs_set_eq:cN { flag~#2~#1 } \tex_undefined:D
       \exp_after:wN \@@_clear:wn
-      \__int_value:w \__int_eval:w 1 + #1
+      \int_value:w \__int_eval:w 1 + #1
     \else:
       \use_i:nnn
     \fi:
@@ -300,7 +300,7 @@
 \cs_new:Npn \@@_height_loop:wn #1 ; #2
   {
     \if_cs_exist:w flag~#2~#1 \cs_end:
-      \exp_after:wN \@@_height_loop:wn \__int_value:w \__int_eval:w 1 +
+      \exp_after:wN \@@_height_loop:wn \int_value:w \__int_eval:w 1 +
     \else:
       \exp_after:wN \@@_height_end:wn
     \fi:
@@ -317,7 +317,7 @@
 \cs_new:Npn \flag_raise:n #1
   {
     \cs:w flag~#1 \exp_after:wN \cs_end:
-    \__int_value:w \flag_height:n {#1} ;
+    \int_value:w \flag_height:n {#1} ;
   }
 %    \end{macrocode}
 % \end{macro}
