--- a/l3kernel/l3fp-basics.dtx
+++ b/l3kernel/l3fp-basics.dtx
@@ -139,7 +139,7 @@
 %   the second operand's sign should be changed.  If the
 %   \meta{types} |#2| and |#4| are the same, dispatch to case |#2| ($0$,
 %   $1$, $2$, or $3$), where we call specialized functions: thanks to
-%   \cs{@@_int_value:w}, those receive the tweaked \meta{sign_2}
+%   \cs{int_value:w}, those receive the tweaked \meta{sign_2}
 %   (expansion of |#1#5|) as an argument.  If the \meta{types} are
 %   distinct, the result is simply the floating point number with the
 %   highest \meta{type}.  Since case $3$ (used for two \texttt{nan})
@@ -162,11 +162,11 @@
         \fi:
       \fi:
       \exp_stop_f:
-           \exp_after:wN \@@_add_zeros_o:Nww \@@_int_value:w
-    \or:   \exp_after:wN \@@_add_normal_o:Nww \@@_int_value:w
-    \or:   \exp_after:wN \@@_add_inf_o:Nww \@@_int_value:w
+           \exp_after:wN \@@_add_zeros_o:Nww \int_value:w
+    \or:   \exp_after:wN \@@_add_normal_o:Nww \int_value:w
+    \or:   \exp_after:wN \@@_add_inf_o:Nww \int_value:w
     \or:   \@@_case_return_i_o:ww
-    \else: \exp_after:wN \@@_add_return_ii_o:Nww \@@_int_value:w
+    \else: \exp_after:wN \@@_add_return_ii_o:Nww \int_value:w
     \fi:
     #1 #5
     \s_@@ \@@_chk:w #2 #3 ;
@@ -275,13 +275,13 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_int_compare:w #2 > #5 \exp_stop_f:
         #2
-        \exp_after:wN \@@_add_big_i_o:wNww \@@_int_value:w -
+        \exp_after:wN \@@_add_big_i_o:wNww \int_value:w -
       \else:
         #5
-        \exp_after:wN \@@_add_big_ii_o:wNww \@@_int_value:w
+        \exp_after:wN \@@_add_big_ii_o:wNww \int_value:w
       \fi:
       \@@_int_eval:w #5 - #2 ; #1 #3;
   }
@@ -340,9 +340,9 @@
 \cs_new:Npn \@@_add_significand_o:NnnwnnnnN #1 #2#3 #4; #5#6#7#8
   {
     \exp_after:wN \@@_add_significand_test_o:N
-    \@@_int_value:w \@@_int_eval:w 1#5#6 + #2
+    \int_value:w \@@_int_eval:w 1#5#6 + #2
       \exp_after:wN \@@_add_significand_pack:NNNNNNN
-      \@@_int_value:w \@@_int_eval:w 1#7#8 + #3 ; #1
+      \int_value:w \@@_int_eval:w 1#7#8 + #3 ; #1
   }
 \cs_new:Npn \@@_add_significand_pack:NNNNNNN #1 #2#3#4#5#6#7
   {
@@ -377,9 +377,9 @@
     #1; #2; #3#4 ; #5#6
   {
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1 #1
+    \int_value:w \@@_int_eval:w 1 #1
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 1 #2 #3#4
+      \int_value:w \@@_int_eval:w 1 #2 #3#4
         + \@@_round:NNN #6 #4 #5
         \exp_after:wN ;
   }
@@ -400,13 +400,13 @@
   {
     + 1
     \exp_after:wN \@@_basics_pack_weird_high:NNNNNNNNw
-    \@@_int_value:w \@@_int_eval:w 1 1 #1
+    \int_value:w \@@_int_eval:w 1 1 #1
       \exp_after:wN \@@_basics_pack_weird_low:NNNNw
-      \@@_int_value:w \@@_int_eval:w 1 #2#3 +
+      \int_value:w \@@_int_eval:w 1 #2#3 +
         \exp_after:wN \@@_round:NNN
         \exp_after:wN #6
         \exp_after:wN #3
-        \@@_int_value:w \@@_round_digit:Nw #4 #5 ;
+        \int_value:w \@@_round_digit:Nw #4 #5 ;
         \exp_after:wN ;
   }
 %    \end{macrocode}
@@ -443,7 +443,7 @@
 \cs_new:Npn \@@_sub_npos_ii_o:Nnwnw #1 #2; #3;
   {
     \exp_after:wN \@@_sub_npos_i_o:Nnwnw
-      \@@_int_value:w \@@_neg_sign:N #1
+      \int_value:w \@@_neg_sign:N #1
       #3; #2;
   }
 %    \end{macrocode}
@@ -465,13 +465,13 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       #2
       \if_int_compare:w #2 = #4 \exp_stop_f:
         \exp_after:wN \@@_sub_back_near_o:nnnnnnnnN
       \else:
         \exp_after:wN \@@_decimate:nNnnnn \exp_after:wN
-          { \@@_int_value:w \@@_int_eval:w #2 - #4 - 1 \exp_after:wN }
+          { \int_value:w \@@_int_eval:w #2 - #4 - 1 \exp_after:wN }
           \exp_after:wN \@@_sub_back_far_o:NnnwnnnnN
       \fi:
         #5
@@ -500,9 +500,9 @@
 \cs_new:Npn \@@_sub_back_near_o:nnnnnnnnN #1#2#3#4 #5#6#7#8 #9
   {
     \exp_after:wN \@@_sub_back_near_after:wNNNNw
-    \@@_int_value:w \@@_int_eval:w 10#5#6 - #1#2 - 11
+    \int_value:w \@@_int_eval:w 10#5#6 - #1#2 - 11
       \exp_after:wN \@@_sub_back_near_pack:NNNNNNw
-      \@@_int_value:w \@@_int_eval:w 11#7#8 - #3#4 \exp_after:wN ;
+      \int_value:w \@@_int_eval:w 11#7#8 - #3#4 \exp_after:wN ;
   }
 \cs_new:Npn \@@_sub_back_near_pack:NNNNNNw #1#2#3#4#5#6#7 ;
   { + #1#2 ; {#3#4#5#6} {#7} ; }
@@ -543,7 +543,7 @@
 \cs_new:Npn \@@_sub_back_shift:wnnnn ; #1#2
   {
     \exp_after:wN \@@_sub_back_shift_ii:ww
-    \@@_int_value:w #1 #2 0 ;
+    \int_value:w #1 #2 0 ;
   }
 \cs_new:Npn \@@_sub_back_shift_ii:ww #1 0 ; #2#3 ;
   {
@@ -551,7 +551,7 @@
       - 7
       - \exp_after:wN \use_i:nnn
         \exp_after:wN \@@_sub_back_shift_iii:NNNNNNNNw
-        \@@_int_value:w #2#3 0 ~ 123456789;
+        \int_value:w #2#3 0 ~ 123456789;
     \else:
       - \@@_sub_back_shift_iii:NNNNNNNNw #1 123456789;
     \fi:
@@ -559,7 +559,7 @@
     \exp_after:wN \@@_pack_twice_four:wNNNNNNNN
     \exp_after:wN \@@_sub_back_shift_iv:nnnnw
     \exp_after:wN ;
-    \@@_int_value:w
+    \int_value:w
     #1 ~ #2#3 0 ~ 0000 0000 0000 000 ;
   }
 \cs_new:Npn \@@_sub_back_shift_iii:NNNNNNNNw #1#2#3#4#5#6#7#8#9; {#8}
@@ -658,9 +658,9 @@
   {
     - 1
     \exp_after:wN \@@_sub_back_near_after:wNNNNw
-    \@@_int_value:w \@@_int_eval:w 1#30 - #1 - 11
+    \int_value:w \@@_int_eval:w 1#30 - #1 - 11
       \exp_after:wN \@@_sub_back_near_pack:NNNNNNw
-      \@@_int_value:w \@@_int_eval:w 11 0000 0000 + #40 - #2
+      \int_value:w \@@_int_eval:w 11 0000 0000 + #40 - #2
         - \exp_after:wN \@@_round_neg:NNN
           \exp_after:wN #6
           \use_none:nnnnnnn #2 #5
@@ -678,7 +678,7 @@
 %   complicated: we have two \meta{rounding} digits |#3| and |#6| (from
 %   the decimation, and from the new shift) to take into account, and
 %   getting the parity of the main result requires a computation.  The
-%   first \cs{@@_int_value:w} triggers the second one because the number
+%   first \cs{int_value:w} triggers the second one because the number
 %   is unfinished; we can thus not use $0$ in place of $2$ there.
 %    \begin{macrocode}
 \cs_new:Npn \@@_sub_back_very_far_o:wwwwNN #1#2#3#4#5#6#7
@@ -691,15 +691,15 @@
 \cs_new:Npn \@@_sub_back_very_far_ii_o:nnNwwNN #1#2 ; #3 ; #4 ~ #5; #6#7
   {
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1#4 - #1 - 1
+    \int_value:w \@@_int_eval:w 1#4 - #1 - 1
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 2#5 - #2
+      \int_value:w \@@_int_eval:w 2#5 - #2
         - \exp_after:wN \@@_round_neg:NNN
           \exp_after:wN #7
-          \@@_int_value:w
+          \int_value:w
             \if_int_odd:w \@@_int_eval:w #5 - #2 \@@_int_eval_end:
               1 \else: 2 \fi:
-          \@@_int_value:w \@@_round_digit:Nw #3 #6 ;
+          \int_value:w \@@_round_digit:Nw #3 #6 ;
       \exp_after:wN ;
   }
 %    \end{macrocode}
@@ -815,7 +815,7 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       #4 + #8
       \@@_mul_significand_o:nnnnNnnnn #5 #1 #9
   }
@@ -850,19 +850,19 @@
   {
     \exp_after:wN \@@_mul_significand_test_f:NNN
     \exp_after:wN #5
-    \@@_int_value:w \@@_int_eval:w 99990000 + #1*#6 +
+    \int_value:w \@@_int_eval:w 99990000 + #1*#6 +
       \exp_after:wN \@@_mul_significand_keep:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 99990000 + #1*#7 + #2*#6 +
+      \int_value:w \@@_int_eval:w 99990000 + #1*#7 + #2*#6 +
         \exp_after:wN \@@_mul_significand_keep:NNNNNw
-        \@@_int_value:w \@@_int_eval:w 99990000 + #1*#8 + #2*#7 + #3*#6 +
+        \int_value:w \@@_int_eval:w 99990000 + #1*#8 + #2*#7 + #3*#6 +
           \exp_after:wN \@@_mul_significand_drop:NNNNNw
-          \@@_int_value:w \@@_int_eval:w 99990000 + #1*#9 + #2*#8 + #3*#7 + #4*#6 +
+          \int_value:w \@@_int_eval:w 99990000 + #1*#9 + #2*#8 + #3*#7 + #4*#6 +
             \exp_after:wN \@@_mul_significand_drop:NNNNNw
-            \@@_int_value:w \@@_int_eval:w 99990000 + #2*#9 + #3*#8 + #4*#7 +
+            \int_value:w \@@_int_eval:w 99990000 + #2*#9 + #3*#8 + #4*#7 +
               \exp_after:wN \@@_mul_significand_drop:NNNNNw
-              \@@_int_value:w \@@_int_eval:w 99990000 + #3*#9 + #4*#8 +
+              \int_value:w \@@_int_eval:w 99990000 + #3*#9 + #4*#8 +
                 \exp_after:wN \@@_mul_significand_drop:NNNNNw
-                \@@_int_value:w \@@_int_eval:w 100000000 + #4*#9 ;
+                \int_value:w \@@_int_eval:w 100000000 + #4*#9 ;
     ; \exp_after:wN ;
   }
 \cs_new:Npn \@@_mul_significand_drop:NNNNNw #1#2#3#4#5 #6;
@@ -910,13 +910,13 @@
 \cs_new:Npn \@@_mul_significand_large_f:NwwNNNN #1 #2; #3; #4#5#6#7; +
   {
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1#2
+    \int_value:w \@@_int_eval:w 1#2
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 1#3#4#5#6#7
+      \int_value:w \@@_int_eval:w 1#3#4#5#6#7
         + \exp_after:wN \@@_round:NNN
           \exp_after:wN #1
           \exp_after:wN #7
-          \@@_int_value:w \@@_round_digit:Nw
+          \int_value:w \@@_round_digit:Nw
   }
 %    \end{macrocode}
 % \end{macro}
@@ -933,13 +933,13 @@
   {
     - 1
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1#3#4
+    \int_value:w \@@_int_eval:w 1#3#4
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 1#5#6#7
+      \int_value:w \@@_int_eval:w 1#5#6#7
         + \exp_after:wN \@@_round:NNN
           \exp_after:wN #1
           \exp_after:wN #7
-          \@@_int_value:w \@@_round_digit:Nw
+          \int_value:w \@@_round_digit:Nw
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1003,10 +1003,10 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       #3 - #6
       \exp_after:wN \@@_div_significand_i_o:wnnw
-        \@@_int_value:w \@@_int_eval:w #7 \use_i:nnnn #8 + 1 ;
+        \int_value:w \@@_int_eval:w #7 \use_i:nnnn #8 + 1 ;
         #4
         {#7}{#8}#9 ;
         #1
@@ -1196,21 +1196,21 @@
 %   \meta{continuation} arguments for $4$ consecutive calls to
 %   \cs{@@_div_significand_calc:wwnnnnnnn}.  Each of these calls needs
 %   \meta{y} (|#1|), and it turns out that we need post-expansion there,
-%   hence the \cs{@@_int_value:w}.  Here, |#4| is six brace groups, which
+%   hence the \cs{int_value:w}.  Here, |#4| is six brace groups, which
 %   give the six first |n|-type arguments of the \texttt{calc} function.
 %    \begin{macrocode}
 \cs_new:Npn \@@_div_significand_i_o:wnnw #1 ; #2#3 #4 ;
   {
     \exp_after:wN \@@_div_significand_test_o:w
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \exp_after:wN \@@_div_significand_calc:wwnnnnnnn
-      \@@_int_value:w \@@_int_eval:w 999999 + #2 #3 0 / #1 ;
+      \int_value:w \@@_int_eval:w 999999 + #2 #3 0 / #1 ;
         #2 #3 ;
         #4
-        { \exp_after:wN \@@_div_significand_ii:wwn \@@_int_value:w #1 }
-        { \exp_after:wN \@@_div_significand_ii:wwn \@@_int_value:w #1 }
-        { \exp_after:wN \@@_div_significand_ii:wwn \@@_int_value:w #1 }
-        { \exp_after:wN \@@_div_significand_iii:wwnnnnn \@@_int_value:w #1 }
+        { \exp_after:wN \@@_div_significand_ii:wwn \int_value:w #1 }
+        { \exp_after:wN \@@_div_significand_ii:wwn \int_value:w #1 }
+        { \exp_after:wN \@@_div_significand_ii:wwn \int_value:w #1 }
+        { \exp_after:wN \@@_div_significand_iii:wwnnnnn \int_value:w #1 }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1286,16 +1286,16 @@
   {
     1 1 #1
     #9 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_Bigg_leading_shift_int
       + #2 - #1 * #5 - #5#60
       \exp_after:wN \@@_pack_Bigg:NNNNNNw
-      \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
+      \int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
         + #3 - #1 * #6 - #70
         \exp_after:wN \@@_pack_Bigg:NNNNNNw
-        \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
+        \int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
           + #4 - #1 * #7 - #80
           \exp_after:wN \@@_pack_Bigg:NNNNNNw
-          \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_trailing_shift_int
+          \int_value:w \@@_int_eval:w \c_@@_Bigg_trailing_shift_int
             - #1 * #8 ;
     {#5}{#6}{#7}{#8}
   }
@@ -1303,16 +1303,16 @@
   {
     1 0 #1
     #9 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_Bigg_leading_shift_int
       + #2 - #1 * #5
       \exp_after:wN \@@_pack_Bigg:NNNNNNw
-      \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
+      \int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
         + #3 - #1 * #6
         \exp_after:wN \@@_pack_Bigg:NNNNNNw
-        \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
+        \int_value:w \@@_int_eval:w \c_@@_Bigg_middle_shift_int
           + #4 - #1 * #7
           \exp_after:wN \@@_pack_Bigg:NNNNNNw
-          \@@_int_value:w \@@_int_eval:w \c_@@_Bigg_trailing_shift_int
+          \int_value:w \@@_int_eval:w \c_@@_Bigg_trailing_shift_int
             - #1 * #8 ;
     {#5}{#6}{#7}{#8}
   }
@@ -1339,9 +1339,9 @@
 \cs_new:Npn \@@_div_significand_ii:wwn #1; #2;#3
   {
     \exp_after:wN \@@_div_significand_pack:NNN
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \exp_after:wN \@@_div_significand_calc:wwnnnnnnn
-      \@@_int_value:w \@@_int_eval:w 999999 + #2 #3 0 / #1 ; #2 #3 ;
+      \int_value:w \@@_int_eval:w 999999 + #2 #3 0 / #1 ; #2 #3 ;
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1361,7 +1361,7 @@
   {
     0
     \exp_after:wN \@@_div_significand_iv:wwnnnnnnn
-    \@@_int_value:w \@@_int_eval:w ( 2 * #2 #3) / #6 #7 ; % <- P
+    \int_value:w \@@_int_eval:w ( 2 * #2 #3) / #6 #7 ; % <- P
       #2 ; {#3} {#4} {#5}
       {#6} {#7}
   }
@@ -1420,11 +1420,11 @@
   {
     + 5 * #1
     \exp_after:wN \@@_div_significand_vi:Nw
-    \@@_int_value:w \@@_int_eval:w -20 + 2*#2#3 - #1*#6#7 +
+    \int_value:w \@@_int_eval:w -20 + 2*#2#3 - #1*#6#7 +
       \exp_after:wN \@@_div_significand_v:NN
-      \@@_int_value:w \@@_int_eval:w 199980 + 2*#4 - #1*#8 +
+      \int_value:w \@@_int_eval:w 199980 + 2*#4 - #1*#8 +
         \exp_after:wN \@@_div_significand_v:NN
-        \@@_int_value:w \@@_int_eval:w 200000 + 2*#5 - #1*#9 ;
+        \int_value:w \@@_int_eval:w 200000 + 2*#5 - #1*#9 ;
   }
 \cs_new:Npn \@@_div_significand_v:NN #1#2 { #1#2 \@@_int_eval_end: + }
 \cs_new:Npn \@@_div_significand_vi:Nw #1#2;
@@ -1500,9 +1500,9 @@
     0 #1; #2; #3; #4#5#6#7#8; #9
   {
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1 #1#2
+    \int_value:w \@@_int_eval:w 1 #1#2
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 1 #3#4#5#6#7
+      \int_value:w \@@_int_eval:w 1 #3#4#5#6#7
         + \@@_round:NNN #9 #7 #8
         \exp_after:wN ;
   }
@@ -1524,13 +1524,13 @@
   {
     + 1
     \exp_after:wN \@@_basics_pack_weird_high:NNNNNNNNw
-    \@@_int_value:w \@@_int_eval:w 1 #1 #2
+    \int_value:w \@@_int_eval:w 1 #1 #2
       \exp_after:wN \@@_basics_pack_weird_low:NNNNw
-      \@@_int_value:w \@@_int_eval:w 1 #3 #4 #5 #6 +
+      \int_value:w \@@_int_eval:w 1 #3 #4 #5 #6 +
         \exp_after:wN \@@_round:NNN
         \exp_after:wN #9
         \exp_after:wN #6
-        \@@_int_value:w \@@_round_digit:Nw #7 #8 ;
+        \int_value:w \@@_round_digit:Nw #7 #8 ;
       \exp_after:wN ;
   }
 %    \end{macrocode}
@@ -1574,7 +1574,7 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN 0
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_int_odd:w #1 \exp_stop_f:
         \exp_after:wN \@@_sqrt_npos_auxi_o:wwnnN
       \fi:
@@ -1663,11 +1663,11 @@
   {
     \if_int_compare:w #1 = #2 \exp_stop_f:
       \exp_after:wN \@@_sqrt_auxi_o:NNNNwnnN
-      \@@_int_value:w \@@_int_eval:w 9999 9999 +
+      \int_value:w \@@_int_eval:w 9999 9999 +
         \exp_after:wN \@@_use_none_until_s:w
     \fi:
     \exp_after:wN \@@_sqrt_Newton_o:wwn
-    \@@_int_value:w \@@_int_eval:w (#1 + #3 * 1 0000 0000 / #1) / 2 ;
+    \int_value:w \@@_int_eval:w (#1 + #3 * 1 0000 0000 / #1) / 2 ;
     #1; {#3}
   }
 %    \end{macrocode}
@@ -1756,32 +1756,32 @@
 \cs_new:Npn \@@_sqrt_auxii_o:NnnnnnnnN #1 #2#3#4#5#6 #7#8#9
   {
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w \c_@@_big_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_big_leading_shift_int
       + #7 - #2 * #2
       \exp_after:wN \@@_pack_big:NNNNNNw
-      \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+      \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
         - 2 * #2 * #3
         \exp_after:wN \@@_pack_big:NNNNNNw
-        \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+        \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
           + #8 - #3 * #3 - 2 * #2 * #4
           \exp_after:wN \@@_pack_big:NNNNNNw
-          \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+          \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
             - 2 * #3 * #4 - 2 * #2 * #5
             \exp_after:wN \@@_pack_big:NNNNNNw
-            \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+            \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
               + #9 000 0000 - #4 * #4 - 2 * #3 * #5 - 2 * #2 * #6
               \exp_after:wN \@@_pack_big:NNNNNNw
-              \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+              \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
                 - 2 * #4 * #5 - 2 * #3 * #6
                 \exp_after:wN \@@_pack_big:NNNNNNw
-                \@@_int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
+                \int_value:w \@@_int_eval:w \c_@@_big_middle_shift_int
                   - #5 * #5 - 2 * #4 * #6
                   \exp_after:wN \@@_pack_big:NNNNNNw
-                  \@@_int_value:w \@@_int_eval:w
+                  \int_value:w \@@_int_eval:w
                     \c_@@_big_middle_shift_int
                     - 2 * #5 * #6
                     \exp_after:wN \@@_pack_big:NNNNNNw
-                    \@@_int_value:w \@@_int_eval:w
+                    \int_value:w \@@_int_eval:w
                       \c_@@_big_trailing_shift_int
                       - #6 * #6 ;
     % (
@@ -1839,18 +1839,18 @@
   {
     \if_int_compare:w #1 > 1 \exp_stop_f:
       \exp_after:wN \@@_sqrt_auxiv_o:NNNNNw
-      \@@_int_value:w \@@_int_eval:w (#1#2 %)
+      \int_value:w \@@_int_eval:w (#1#2 %)
     \else:
       \if_int_compare:w #1#2 > 1 \exp_stop_f:
         \exp_after:wN \@@_sqrt_auxv_o:NNNNNw
-        \@@_int_value:w \@@_int_eval:w (#1#2#3 %)
+        \int_value:w \@@_int_eval:w (#1#2#3 %)
       \else:
         \if_int_compare:w #1#2#3 > 1 \exp_stop_f:
           \exp_after:wN \@@_sqrt_auxvi_o:NNNNNw
-          \@@_int_value:w \@@_int_eval:w (#1#2#3#4 %)
+          \int_value:w \@@_int_eval:w (#1#2#3#4 %)
         \else:
           \exp_after:wN \@@_sqrt_auxvii_o:NNNNNw
-          \@@_int_value:w \@@_int_eval:w (#1#2#3#4#5 %)
+          \int_value:w \@@_int_eval:w (#1#2#3#4#5 %)
         \fi:
       \fi:
     \fi:
@@ -1880,11 +1880,11 @@
 \cs_new:Npn \@@_sqrt_auxviii_o:nnnnnnn #1#2 #3#4#5#6#7
   {
     \exp_after:wN \@@_sqrt_auxix_o:wnwnw
-    \@@_int_value:w \@@_int_eval:w #3
+    \int_value:w \@@_int_eval:w #3
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w #1 + 1#4#5
+      \int_value:w \@@_int_eval:w #1 + 1#4#5
         \exp_after:wN \@@_basics_pack_low:NNNNNw
-        \@@_int_value:w \@@_int_eval:w #2 + 1#6#7 ;
+        \int_value:w \@@_int_eval:w #2 + 1#6#7 ;
   }
 \cs_new:Npn \@@_sqrt_auxix_o:wnwnw #1; #2#3; #4#5;
   {
@@ -1930,7 +1930,7 @@
 \cs_new:Npn \@@_sqrt_auxx_o:Nnnnnnnn #1#2#3 #4#5#6#7#8
   {
     \exp_after:wN \@@_sqrt_auxxi_o:wwnnN
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       (#8 + 2499) / 5000 * 5000 ;
       {#4} {#5} {#6} {#7} ;
   }
@@ -1969,10 +1969,10 @@
         \fi:
       \fi:
       \exp_after:wN \@@_sqrt_auxxiv_o:wnnnnnnnN
-      \@@_int_value:w 9998
+      \int_value:w 9998
     \else:
       \exp_after:wN \@@_sqrt_auxxiv_o:wnnnnnnnN
-      \@@_int_value:w 10000
+      \int_value:w 10000
     \fi:
     ;
   }
@@ -2008,18 +2008,18 @@
 \cs_new:Npn \@@_sqrt_auxxiv_o:wnnnnnnnN #1; #2#3#4#5#6 #7#8#9
   {
     \exp_after:wN \@@_basics_pack_high:NNNNNw
-    \@@_int_value:w \@@_int_eval:w 1 0000 0000 + #2#3
+    \int_value:w \@@_int_eval:w 1 0000 0000 + #2#3
       \exp_after:wN \@@_basics_pack_low:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 1 0000 0000
+      \int_value:w \@@_int_eval:w 1 0000 0000
         + #4#5
         \if_int_compare:w #6 > #1 \exp_stop_f: + 1 \fi:
         + \exp_after:wN \@@_round:NNN
           \exp_after:wN 0
           \exp_after:wN 0
-          \@@_int_value:w
+          \int_value:w
             \exp_after:wN \use_i:nn
             \exp_after:wN \@@_round_digit:Nw
-            \@@_int_value:w \@@_int_eval:w #6 + 19999 - #1 ;
+            \int_value:w \@@_int_eval:w #6 + 19999 - #1 ;
     \exp_after:wN ;
   }
 %    \end{macrocode}
@@ -2061,7 +2061,7 @@
     \exp_after:wN \s_@@
     \exp_after:wN \@@_chk:w
     \exp_after:wN #2
-    \@@_int_value:w
+    \int_value:w
       \if_case:w #3 \exp_stop_f: #1 \or: 1 \or: 0 \fi: \exp_stop_f:
     #4;
   }
