--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -182,7 +182,7 @@
     \s_@@ \@@_chk:w #1 #2 #3;
     \s_@@ \@@_chk:w #4 #5 #6;
   {
-    \@@_int_value:w
+    \int_value:w
       \if_meaning:w 3 #1 \exp_after:wN \@@_compare_nan:w \fi:
       \if_meaning:w 3 #4 \exp_after:wN \@@_compare_nan:w \fi:
       \if_meaning:w 2 #5 - \fi:
@@ -214,7 +214,7 @@
 %   Tuple and floating point numbers are not comparable so return $2$ in
 %   mixed cases or when tuples have a different number of items.
 %   Otherwise compare pairs of items with \cs{@@_compare_back_any:ww}
-%   and if any don't match return~$2$ (as \cs{@@_int_value:w} |02|
+%   and if any don't match return~$2$ (as \cs{int_value:w} |02|
 %   \cs{exp_stop_f:}).
 %    \begin{macrocode}
 \cs_new:Npn \@@_compare_back_tuple:ww #1; #2; { 2 }
@@ -225,7 +225,7 @@
   {
     \int_compare:nNnTF { \@@_array_count:n {#1} } = { \@@_array_count:n {#2} }
       {
-        \@@_int_value:w 0
+        \int_value:w 0
           \@@_tuple_compare_back_loop:w
               #1 { \s_@@ \__prg_break: } ; @
               #2 { \s_@@ \__prg_break: } ;
@@ -256,7 +256,7 @@
 %       \Arg{expo_1} \meta{body_1} |;|
 %       \Arg{expo_2} \meta{body_2} |;|
 %   \end{quote}
-%   Within an \cs{@@_int_value:w} \ldots{} \cs{exp_stop_f:} construction,
+%   Within an \cs{int_value:w} \ldots{} \cs{exp_stop_f:} construction,
 %   this expands to $0$ if the two numbers are equal, $-1$ if the first
 %   is smaller, and $1$ if the first is bigger.  First compare the
 %   exponents: the larger one denotes the larger number.  If they are
