--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -147,19 +147,19 @@
   {
     \use_none:n #2
     \exp_after:wN \@@_rand_myriads_get:w
-    \@@_int_value:w \@@_rand_uniform: ; {#1}{#2}
+    \int_value:w \@@_rand_uniform: ; {#1}{#2}
   }
 \cs_new:Npn \@@_rand_myriads_get:w #1 ;
   {
     \if_int_compare:w #1 < \c_@@_rand_eight_int
       \exp_after:wN \use_none:n
-      \@@_int_value:w \@@_int_eval:w
+      \int_value:w \@@_int_eval:w
         \c_@@_rand_eight_int + #1 \@@_int_eval_end:
       \exp_after:wN \use_i:nnn
     \else:
       \if_int_compare:w #1 < \c_@@_rand_four_int
         \exp_after:wN \use_none:nnnnn
-        \@@_int_value:w \@@_int_eval:w
+        \int_value:w \@@_int_eval:w
           \c_@@_rand_four_int + #1 \@@_int_eval_end:
         \exp_after:wN \exp_after:wN \exp_after:wN \use_i:nn
       \fi:
@@ -169,13 +169,13 @@
 \cs_new:Npn \@@_rand_myriads_last:
   {
     \exp_after:wN \@@_rand_myriads_last:w
-    \@@_int_value:w \@@_rand_uniform: ;
+    \int_value:w \@@_rand_uniform: ;
   }
 \cs_new:Npn \@@_rand_myriads_last:w #1 ;
   {
     \if_int_compare:w #1 < \c_@@_rand_four_int
       \exp_after:wN \use_none:nnnnn
-      \@@_int_value:w \@@_int_eval:w
+      \int_value:w \@@_int_eval:w
         \c_@@_rand_four_int + #1 \@@_int_eval_end:
     \else:
       \exp_after:wN \@@_rand_myriads_last:
@@ -282,7 +282,7 @@
 \cs_new:Npn \@@_randint_e:wnn #1;
   {
     \exp_after:wN \@@_randint_e:wwNnn
-    \@@_int_value:w \@@_rand_uniform: \exp_after:wN ;
+    \int_value:w \@@_rand_uniform: \exp_after:wN ;
     \exp:w \exp_end_continue_f:w
       \fp_compare:nNnTF { #1 ; } < \c_@@_rand_size_int
         { \fp_to_int:n { #1 ; + 1 } ; \@@_randint_narrow_e:nnnn }
@@ -291,14 +291,14 @@
 \cs_new:Npn \@@_randint_e:wwNnn #1 ; #2 ;
   {
     \exp_after:wN \@@_randint_e:wwwNnn
-    \@@_int_value:w \int_mod:nn {#1} {#2} ; #1 ; #2 ;
+    \int_value:w \int_mod:nn {#1} {#2} ; #1 ; #2 ;
   }
 \cs_new:Npn \@@_randint_e:wwwNnn #1 ; #2 ; #3 ; #4
   {
     \int_compare:nNnTF { #2 - #1 + #3 } > \c_@@_rand_size_int
       {
         \exp_after:wN \@@_randint_e:wwNnn
-          \@@_int_value:w \@@_rand_uniform: ; #3 ; #4
+          \int_value:w \@@_rand_uniform: ; #3 ; #4
       }
       { #4 {#1} {#3} }
   }
@@ -316,7 +316,7 @@
     \fp_compare:nNnTF { #1 ; } > {#4}
       {
         \exp_after:wN \@@_randint_e:wwNnn
-          \@@_int_value:w \@@_rand_uniform: ; #2 ;
+          \int_value:w \@@_rand_uniform: ; #2 ;
           \@@_randint_wide_e:nnnn {#3} {#4}
       }
       { \@@_exp_after_o:w #1 ; \exp:w }
