--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -280,7 +280,7 @@
     \exp_after:wN \@@_round:NNN
     \exp_after:wN #1
     \exp_after:wN #2
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_int_odd:w 0 \if_meaning:w 0 #3 1 \fi:
                       \if_meaning:w 5 #3 1 \fi:
                 \exp_stop_f:
@@ -296,9 +296,9 @@
 %
 % \begin{macro}[EXP]{\@@_round_digit:Nw}
 %   \begin{syntax}
-%     \cs{@@_int_value:w} \cs{@@_round_digit:Nw} \meta{digit} \meta{intexpr} |;|
+%     \cs{int_value:w} \cs{@@_round_digit:Nw} \meta{digit} \meta{intexpr} |;|
 %   \end{syntax}
-%   This function should always be called within an \cs{@@_int_value:w}
+%   This function should always be called within an \cs{int_value:w}
 %   or \cs{@@_int_eval:w} expansion; it may add an extra
 %   \cs{@@_int_eval:w}, which means that the integer or integer
 %   expression should not be ended with a synonym of \tn{relax}, but
@@ -494,7 +494,7 @@
     \if_meaning:w 1 #2
       \exp_after:wN \@@_round_normal:NwNNnw
       \exp_after:wN #1
-      \@@_int_value:w #5
+      \int_value:w #5
     \else:
       \exp_after:wN \@@_exp_after_o:w
     \fi:
@@ -508,14 +508,14 @@
 \cs_new:Npn \@@_round_normal:NnnwNNnn #1#2#3#4; #5#6
   {
     \exp_after:wN \@@_round_normal:NNwNnn
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_int_compare:w #2 > 0 \exp_stop_f:
-        1 \@@_int_value:w #2
+        1 \int_value:w #2
         \exp_after:wN \@@_round_pack:Nw
-        \@@_int_value:w \@@_int_eval:w 1#3 +
+        \int_value:w \@@_int_eval:w 1#3 +
       \else:
         \if_int_compare:w #3 > 0 \exp_stop_f:
-          1 \@@_int_value:w #3 +
+          1 \int_value:w #3 +
         \fi:
       \fi:
       \exp_after:wN #5
@@ -551,7 +551,7 @@
     \else:
       \exp_after:wN \@@_round_special_aux:Nw
       \exp_after:wN #4
-      \@@_int_value:w \@@_int_eval:w 1
+      \int_value:w \@@_int_eval:w 1
         \if_meaning:w 1 #1 -#6 \else: +#5 \fi:
     \fi:
     ;
