--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -186,7 +186,7 @@
           {
             \__kernel_msg_error:nnxxxx { kernel } { overflow }
               { \token_to_str:N #1 } {#2} {#3}
-              { \int_compare:nNnT {#3} < 0 { - } \__int_value:w \c_max_dim }
+              { \int_compare:nNnT {#3} < 0 { - } \int_value:w \c_max_dim }
             \@@_gset_fast:Nnn #1 {#2}
               { \int_compare:nNnT {#3} < 0 { - } \c_max_dim }
           }
