--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -176,14 +176,14 @@
 \cs_new:Npn \@@_ln_npos_o:w \s_@@ \@@_chk:w 10#1#2#3;
   { %^^A todo: ln(1) should be "exact zero", not "underflow"
     \exp_after:wN \@@_sanitize:Nw
-    \@@_int_value:w % for the overall sign
+    \int_value:w % for the overall sign
       \if_int_compare:w #1 < 1 \exp_stop_f:
         2
       \else:
         0
       \fi:
       \exp_after:wN \exp_stop_f:
-      \@@_int_value:w \@@_int_eval:w % for the exponent
+      \int_value:w \@@_int_eval:w % for the exponent
         \@@_ln_significand:NNNNnnnN #2#3
         \@@_ln_exponent:wn {#1}
   }
@@ -203,7 +203,7 @@
 \cs_new:Npn \@@_ln_significand:NNNNnnnN #1#2#3#4
   {
     \exp_after:wN \@@_ln_x_ii:wnnnn
-    \@@_int_value:w
+    \int_value:w
       \if_case:w #1 \exp_stop_f:
       \or:
         \if_int_compare:w #2 < 4 \exp_stop_f:
@@ -231,13 +231,13 @@
   {
     \exp_after:wN \@@_ln_div_after:Nw
     \cs:w c_@@_ln_ \@@_int_to_roman:w #1 _fixed_tl \exp_after:wN \cs_end:
-    \@@_int_value:w
+    \int_value:w
       \exp_after:wN \@@_ln_x_iv:wnnnnnnnn
-      \@@_int_value:w \@@_int_eval:w
+      \int_value:w \@@_int_eval:w
         \exp_after:wN \@@_ln_x_iii_var:NNNNNw
-        \@@_int_value:w \@@_int_eval:w 9999 9990 + #1*#2#3 +
+        \int_value:w \@@_int_eval:w 9999 9990 + #1*#2#3 +
           \exp_after:wN \@@_ln_x_iii:NNNNNNw
-          \@@_int_value:w \@@_int_eval:w 10 0000 0000 + #1*#4#5 ;
+          \int_value:w \@@_int_eval:w 10 0000 0000 + #1*#4#5 ;
     {20000} {0000} {0000} {0000}
   } %^^A todo: reoptimize (a generalization attempt failed).
 \cs_new:Npn \@@_ln_x_iii:NNNNNNw #1#2 #3#4#5#6 #7;
@@ -322,33 +322,33 @@
 \cs_new:Npn \@@_ln_x_iv:wnnnnnnnn #1; #2#3#4#5 #6#7#8#9
   {
     \exp_after:wN \@@_div_significand_pack:NNN
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
     \@@_ln_div_i:w #1 ;
       #6 #7 ; {#8} {#9}
       {#2} {#3} {#4} {#5}
-      { \exp_after:wN \@@_ln_div_ii:wwn \@@_int_value:w #1 }
-      { \exp_after:wN \@@_ln_div_ii:wwn \@@_int_value:w #1 }
-      { \exp_after:wN \@@_ln_div_ii:wwn \@@_int_value:w #1 }
-      { \exp_after:wN \@@_ln_div_ii:wwn \@@_int_value:w #1 }
-      { \exp_after:wN \@@_ln_div_vi:wwn \@@_int_value:w #1 }
+      { \exp_after:wN \@@_ln_div_ii:wwn \int_value:w #1 }
+      { \exp_after:wN \@@_ln_div_ii:wwn \int_value:w #1 }
+      { \exp_after:wN \@@_ln_div_ii:wwn \int_value:w #1 }
+      { \exp_after:wN \@@_ln_div_ii:wwn \int_value:w #1 }
+      { \exp_after:wN \@@_ln_div_vi:wwn \int_value:w #1 }
   }
 \cs_new:Npn \@@_ln_div_i:w #1;
   {
     \exp_after:wN \@@_div_significand_calc:wwnnnnnnn
-    \@@_int_value:w \@@_int_eval:w 999999 + 2 0000 0000 / #1 ; % Q1
+    \int_value:w \@@_int_eval:w 999999 + 2 0000 0000 / #1 ; % Q1
   }
 \cs_new:Npn \@@_ln_div_ii:wwn #1; #2;#3 % y; B1;B2 <- for k=1
   {
     \exp_after:wN \@@_div_significand_pack:NNN
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \exp_after:wN \@@_div_significand_calc:wwnnnnnnn
-      \@@_int_value:w \@@_int_eval:w 999999 + #2 #3 / #1 ; % Q2
+      \int_value:w \@@_int_eval:w 999999 + #2 #3 / #1 ; % Q2
       #2 #3 ;
   }
 \cs_new:Npn \@@_ln_div_vi:wwn #1; #2;#3#4#5 #6#7#8#9 %y;F1;F2F3F4x1x2x3x4
   {
     \exp_after:wN \@@_div_significand_pack:NNN
-    \@@_int_value:w \@@_int_eval:w 1000000 + #2 #3 / #1 ; % Q6
+    \int_value:w \@@_int_eval:w 1000000 + #2 #3 / #1 ; % Q6
   }
 %    \end{macrocode}
 %   We now have essentially
@@ -396,12 +396,12 @@
     \exp_after:wN \@@_ln_t_large:NNw
     \exp_after:wN + % <sign>
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w 9999 - #2 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 9999 - #3 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 9999 - #4 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 9999 - #5 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 9999 - #6 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 1 0000 - #7 ;
+    \int_value:w \@@_int_eval:w 9999 - #2 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w 9999 - #3 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w 9999 - #4 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w 9999 - #5 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w 9999 - #6 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w 1 0000 - #7 ;
   }
 %    \end{macrocode}
 %
@@ -418,29 +418,29 @@
 \cs_new:Npn \@@_ln_t_large:NNw #1 #2 #3; #4; #5; #6; #7; #8;
   {
     \exp_after:wN \@@_ln_square_t_after:w
-    \@@_int_value:w \@@_int_eval:w 9999 0000 + #3*#3
+    \int_value:w \@@_int_eval:w 9999 0000 + #3*#3
       \exp_after:wN \@@_ln_square_t_pack:NNNNNw
-      \@@_int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#4
+      \int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#4
         \exp_after:wN \@@_ln_square_t_pack:NNNNNw
-        \@@_int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#5 + #4*#4
+        \int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#5 + #4*#4
           \exp_after:wN \@@_ln_square_t_pack:NNNNNw
-          \@@_int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#6 + 2*#4*#5
+          \int_value:w \@@_int_eval:w 9999 0000 + 2*#3*#6 + 2*#4*#5
             \exp_after:wN \@@_ln_square_t_pack:NNNNNw
-            \@@_int_value:w \@@_int_eval:w 1 0000 0000 + 2*#3*#7 + 2*#4*#6 + #5*#5
+            \int_value:w \@@_int_eval:w 1 0000 0000 + 2*#3*#7 + 2*#4*#6 + #5*#5
               + (2*#3*#8 + 2*#4*#7 + 2*#5*#6) / 1 0000
               % ; ; ;
     \exp_after:wN \@@_ln_twice_t_after:w
-    \@@_int_value:w \@@_int_eval:w -1 + 2*#3
+    \int_value:w \@@_int_eval:w -1 + 2*#3
       \exp_after:wN \@@_ln_twice_t_pack:Nw
-      \@@_int_value:w \@@_int_eval:w 9999 + 2*#4
+      \int_value:w \@@_int_eval:w 9999 + 2*#4
         \exp_after:wN \@@_ln_twice_t_pack:Nw
-        \@@_int_value:w \@@_int_eval:w 9999 + 2*#5
+        \int_value:w \@@_int_eval:w 9999 + 2*#5
           \exp_after:wN \@@_ln_twice_t_pack:Nw
-          \@@_int_value:w \@@_int_eval:w 9999 + 2*#6
+          \int_value:w \@@_int_eval:w 9999 + 2*#6
             \exp_after:wN \@@_ln_twice_t_pack:Nw
-            \@@_int_value:w \@@_int_eval:w 9999 + 2*#7
+            \int_value:w \@@_int_eval:w 9999 + 2*#7
               \exp_after:wN \@@_ln_twice_t_pack:Nw
-              \@@_int_value:w \@@_int_eval:w 10000 + 2*#8 ; ;
+              \int_value:w \@@_int_eval:w 10000 + 2*#8 ; ;
     { \@@_ln_c:NwNw #1 }
     #2
   }
@@ -494,7 +494,7 @@
     \@@_fixed_mul:wwn #3;
     {
       \exp_after:wN \@@_ln_Taylor_loop:www
-      \@@_int_value:w \@@_int_eval:w #1 - 2 ;
+      \int_value:w \@@_int_eval:w #1 - 2 ;
     }
     #3;
   }
@@ -502,7 +502,7 @@
   {
     \fi:
     \exp_after:wN \@@_fixed_mul:wwn
-    \exp_after:wN { \@@_int_value:w \@@_int_eval:w 10000 + #2 } #3;
+    \exp_after:wN { \int_value:w \@@_int_eval:w 10000 + #2 } #3;
   }
 %    \end{macrocode}
 % \end{macro}
@@ -556,16 +556,16 @@
     \if_case:w #2 \exp_stop_f:
       0 \@@_case_return:nw { \@@_fixed_to_float_o:Nw 2 }
     \or:
-      \exp_after:wN \@@_ln_exponent_one:ww \@@_int_value:w
+      \exp_after:wN \@@_ln_exponent_one:ww \int_value:w
     \else:
       \if_int_compare:w #2 > 0 \exp_stop_f:
         \exp_after:wN \@@_ln_exponent_small:NNww
         \exp_after:wN 0
-        \exp_after:wN \@@_fixed_sub:wwn \@@_int_value:w
+        \exp_after:wN \@@_fixed_sub:wwn \int_value:w
       \else:
         \exp_after:wN \@@_ln_exponent_small:NNww
         \exp_after:wN 2
-        \exp_after:wN \@@_fixed_add:wwn \@@_int_value:w -
+        \exp_after:wN \@@_fixed_add:wwn \int_value:w -
       \fi:
     \fi:
     #2; #1;
@@ -648,7 +648,7 @@
     \else:
       \exp_after:wN \@@_sanitize:Nw
       \exp_after:wN 0
-      \@@_int_value:w #1 \@@_int_eval:w
+      \int_value:w #1 \@@_int_eval:w
         \if_int_compare:w #4 < 0 \exp_stop_f:
           \exp_after:wN \use_i:nn
         \else:
@@ -709,7 +709,7 @@
     \@@_fixed_mul:wwn #2 ;
     {
       \exp_after:wN \@@_exp_Taylor_loop:www
-      \@@_int_value:w \@@_int_eval:w #1 - 1 ;
+      \int_value:w \@@_int_eval:w #1 - 1 ;
       #2 ;
     }
   }
@@ -754,7 +754,7 @@
     \exp_after:wN \exp_after:wN
     \cs:w @@_exp_large_ \@@_int_to_roman:w #6 :wN \exp_after:wN \cs_end:
     \exp_after:wN \c_@@_one_fixed_tl
-    \@@_int_value:w #3 #4 \exp_stop_f:
+    \int_value:w #3 #4 \exp_stop_f:
     #5 00000 ;
   }
 \cs_new:Npn \@@_exp_large:w #1 \or: #2 \fi:
@@ -1036,7 +1036,7 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN 0
-    \@@_int_value:w
+    \int_value:w
       \if:w #1 \if_int_compare:w #3 > 0 \exp_stop_f: 0 \else: 2 \fi:
         \exp_after:wN \@@_pow_npos_aux:NNnww
         \exp_after:wN +
@@ -1081,37 +1081,37 @@
 \cs_new:Npn \@@_pow_exponent:Nwnnnnnw #1#2; #3#4#5#6#7#8;
   { %^^A todo: use that in ln.
     \exp_after:wN \@@_fixed_mul_after:wwn
-    \@@_int_value:w \@@_int_eval:w \c_@@_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_leading_shift_int
       \exp_after:wN \@@_pack:NNNNNw
-      \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+      \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
         #1#2*23025 - #1 #3
         \exp_after:wN \@@_pack:NNNNNw
-        \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+        \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
           #1 #2*8509 - #1 #4
           \exp_after:wN \@@_pack:NNNNNw
-          \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+          \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
             #1 #2*2994 - #1 #5
             \exp_after:wN \@@_pack:NNNNNw
-            \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+            \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
               #1 #2*0456 - #1 #6
               \exp_after:wN \@@_pack:NNNNNw
-              \@@_int_value:w \@@_int_eval:w \c_@@_trailing_shift_int
+              \int_value:w \@@_int_eval:w \c_@@_trailing_shift_int
                 #1 #2*8401 - #1 #7
                 #1 ( #2*7991 - #8 ) / 1 0000 ; ;
   }
 \cs_new:Npn \@@_pow_B:wwN #1#2#3#4#5#6; #7;
   {
     \if_int_compare:w #7 < 0 \exp_stop_f:
-      \exp_after:wN \@@_pow_C_neg:w \@@_int_value:w -
+      \exp_after:wN \@@_pow_C_neg:w \int_value:w -
     \else:
       \if_int_compare:w #7 < 22 \exp_stop_f:
-        \exp_after:wN \@@_pow_C_pos:w \@@_int_value:w
+        \exp_after:wN \@@_pow_C_pos:w \int_value:w
       \else:
-        \exp_after:wN \@@_pow_C_overflow:w \@@_int_value:w
+        \exp_after:wN \@@_pow_C_overflow:w \int_value:w
       \fi:
     \fi:
     #7 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w 10 0000 + #1 \@@_int_eval_end:
+    \int_value:w \@@_int_eval:w 10 0000 + #1 \@@_int_eval_end:
     #2#3#4#5#6 0000 0000 0000 0000 0000 0000 ; %^^A todo: how many 0?
   }
 \cs_new:Npn \@@_pow_C_overflow:w #1; #2; #3
@@ -1133,9 +1133,9 @@
       \exp_after:wN #2
     \else:
       \if_meaning:w 0 #2
-        \exp_after:wN \@@_pow_C_pos_loop:wN \@@_int_value:w
+        \exp_after:wN \@@_pow_C_pos_loop:wN \int_value:w
       \else:
-        \exp_after:wN \@@_pow_C_overflow:w \@@_int_value:w
+        \exp_after:wN \@@_pow_C_overflow:w \int_value:w
       \fi:
       \@@_int_eval:w #1 - 1 \exp_after:wN ;
     \fi:
@@ -1178,7 +1178,7 @@
     \exp_after:wN \s_@@
     \exp_after:wN \@@_chk:w
     \exp_after:wN #2
-    \@@_int_value:w \@@_int_eval:w 2 - #3 \@@_int_eval_end:
+    \int_value:w \@@_int_eval:w 2 - #3 \@@_int_eval_end:
   }
 %    \end{macrocode}
 % ^^A todo: is this \@@_exp_after_o:w necessary?  Appropriate?
