--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -363,7 +363,7 @@
     \exp_after:wN #2
     \exp_after:wN #3
     \exp_after:wN #4
-    \@@_int_value:w \@@_int_eval:w #5
+    \int_value:w \@@_int_eval:w #5
       \exp_after:wN \exp_after:wN \exp_after:wN \exp_after:wN
       \if_int_compare:w #7 > #1 0 1 \exp_stop_f:
         #1 \@@_trig_large:ww \@@_trigd_large:ww
@@ -455,7 +455,7 @@
 \cs_new:Npn \@@_trigd_large_auxi:nnnnwNNNN #1#2#3#4#5; #6#7#8#9
   {
     \exp_after:wN \@@_trigd_large_auxii:wNw
-    \@@_int_value:w \@@_int_eval:w #1 + #2
+    \int_value:w \@@_int_eval:w #1 + #2
       - (#1 + #2 - 4) / 9 * 9 \@@_int_eval_end:
     #3;
     #4; #5{#6#7#8#9};
@@ -464,7 +464,7 @@
   {
     + (#1#2 - 4) / 9 * 2
     \exp_after:wN \@@_trigd_large_auxiii:www
-    \@@_int_value:w \@@_int_eval:w #1#2
+    \int_value:w \@@_int_eval:w #1#2
       - (#1#2 - 4) / 9 * 9 \@@_int_eval_end: #3 ;
   }
 \cs_new:Npn \@@_trigd_large_auxiii:www #1; #2; #3!
@@ -710,9 +710,9 @@
 \cs_new:Npn \@@_trig_large:ww #1, #2#3#4#5#6;
   {
     \exp_after:wN \@@_trig_large_auxi:wwwwww
-    \@@_int_value:w \@@_int_eval:w (#1 - 32) / 64 \exp_after:wN ,
-    \@@_int_value:w \@@_int_eval:w (#1 - 4) / 8 \exp_after:wN ,
-    \@@_int_value:w #1 \@@_trig_inverse_two_pi: ;
+    \int_value:w \@@_int_eval:w (#1 - 32) / 64 \exp_after:wN ,
+    \int_value:w \@@_int_eval:w (#1 - 4) / 8 \exp_after:wN ,
+    \int_value:w #1 \@@_trig_inverse_two_pi: ;
     {#2}{#3}{#4}{#5} ;
   }
 \cs_new:Npn \@@_trig_large_auxi:wwwwww #1, #2, #3, #4!
@@ -761,7 +761,7 @@
   {
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxvii:w
-    \@@_int_value:w \@@_int_eval:w \c_@@_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_leading_shift_int
       \prg_replicate:nn { 13 }
         { \@@_trig_large_auxvi:wnnnnnnnn }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
@@ -771,7 +771,7 @@
 \cs_new:Npn \@@_trig_large_auxvi:wnnnnnnnn #1; #2#3#4#5#6#7#8#9
   {
     \exp_after:wN \@@_trig_large_pack:NNNNNw
-    \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
       + #2*#9 + #3*#8 + #4*#7 + #5*#6
       #1; {#2}{#3}{#4}{#5} {#7}{#8}{#9}
   }
@@ -809,7 +809,7 @@
 \cs_new:Npn \@@_trig_large_auxvii:w #1#2#3
   {
     \exp_after:wN \@@_trig_large_auxviii:ww
-    \@@_int_value:w \@@_int_eval:w (#1#2#3 - 62) / 125 ;
+    \int_value:w \@@_int_eval:w (#1#2#3 - 62) / 125 ;
     #1#2#3
   }
 \cs_new:Npn \@@_trig_large_auxviii:ww #1;
@@ -827,7 +827,7 @@
   {
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxxi:w
-    \@@_int_value:w \@@_int_eval:w \c_@@_leading_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_leading_shift_int
       \prg_replicate:nn { 13 }
         { \@@_trig_large_auxx:wNNNNN }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
@@ -836,14 +836,14 @@
 \cs_new:Npn \@@_trig_large_auxx:wNNNNN #1; #2 #3#4#5#6
   {
     \exp_after:wN \@@_trig_large_pack:NNNNNw
-    \@@_int_value:w \@@_int_eval:w \c_@@_middle_shift_int
+    \int_value:w \@@_int_eval:w \c_@@_middle_shift_int
       #2 8 * #3#4#5#6
       #1; #2
   }
 \cs_new:Npn \@@_trig_large_auxxi:w #1;
   {
     \exp_after:wN \@@_ep_mul_raw:wwwwN
-    \@@_int_value:w \@@_int_eval:w 0 \@@_ep_to_ep_loop:N #1 ; ; !
+    \int_value:w \@@_int_eval:w 0 \@@_ep_to_ep_loop:N #1 ; ; !
     0,{7853}{9816}{3397}{4483}{0961}{5661};
     \@@_trig_small:ww
   }
@@ -890,7 +890,7 @@
     {
       \exp_after:wN \@@_sin_series_aux_o:NNnwww
       \exp_after:wN #1
-      \@@_int_value:w
+      \int_value:w
         \if_int_odd:w \@@_int_eval:w (#3 + 2) / 4 \@@_int_eval_end:
           #2
         \else:
@@ -934,7 +934,7 @@
     {
       \exp_after:wN \@@_sanitize:Nw
       \exp_after:wN #2
-      \@@_int_value:w \@@_int_eval:w #1
+      \int_value:w \@@_int_eval:w #1
     }
     #2
   }
@@ -953,7 +953,7 @@
 %   $\tan\lvert x\rvert\geq 0$ coincide with those for which $\lfloor
 %   (|#3| + 1) / 2\rfloor$ is odd.  We also have to take into account
 %   the original sign of $x$ to get the sign of the final result; it is
-%   straightforward to check that the first \cs{@@_int_value:w} expansion
+%   straightforward to check that the first \cs{int_value:w} expansion
 %   produces $0$ for a positive final result, and $2$ otherwise.  A
 %   similar story holds for $\cot(x)$.
 %
@@ -978,7 +978,7 @@
     \@@_fixed_mul:wwn #4; #4;
     {
       \exp_after:wN \@@_tan_series_aux_o:Nnwww
-      \@@_int_value:w
+      \int_value:w
         \if_int_odd:w \@@_int_eval:w #3 / 2 \@@_int_eval_end:
           \exp_after:wN \reverse_if:N
         \fi:
@@ -1013,7 +1013,7 @@
     {
       \exp_after:wN \@@_sanitize:Nw
       \exp_after:wN #1
-      \@@_int_value:w \@@_int_eval:w \@@_ep_to_float_o:wwN
+      \int_value:w \@@_int_eval:w \@@_ep_to_float_o:wwN
     }
     #1
   }
@@ -1170,7 +1170,7 @@
   {
     \exp_after:wN \@@_atan_combine_o:NwwwwwN
     \exp_after:wN #2
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_meaning:w 2 #5 7 - \fi: #3 \exp_after:wN ;
     \c_@@_one_fixed_tl
     {0000}{0000}{0000}{0000}{0000}{0000};
@@ -1217,7 +1217,7 @@
   {
     \exp_after:wN \@@_atan_combine_o:NwwwwwN
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_meaning:w 2 #4
         7 - \@@_int_eval:w
       \fi:
@@ -1315,7 +1315,7 @@
     \@@_rrot:www \@@_fixed_mul_sub_back:wwwn #2; #3;
     {
       \exp_after:wN \@@_atan_Taylor_loop:www
-      \@@_int_value:w \@@_int_eval:w #1 - 2 ;
+      \int_value:w \@@_int_eval:w #1 - 2 ;
     }
     #3;
   }
@@ -1354,7 +1354,7 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \@@_int_value:w \@@_int_eval:w
+    \int_value:w \@@_int_eval:w
       \if_meaning:w 0 #2
         \exp_after:wN \use_i:nn
       \else:
@@ -1365,7 +1365,7 @@
         \@@_fixed_mul:wwn #3; #4;
         {
           \exp_after:wN \@@_atan_combine_aux:ww
-          \@@_int_value:w \@@_int_eval:w #2 / 2 ; #2;
+          \int_value:w \@@_int_eval:w #2 / 2 ; #2;
         }
       }
       { #7 \@@_fixed_to_float_o:wN \@@_fixed_to_float_rad_o:wN }
