--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -877,12 +877,11 @@
 %<@@=str>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_int_eval:w, \@@_int_value:w}
+% \begin{macro}{\@@_int_eval:w}
 %   Access to primitives: the code here uses the expansion behaviors for
 %   efficiency.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
-\cs_new_eq:NN \@@_int_value:w \tex_number:D
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1510,8 +1509,8 @@
 \cs_new:Npn \@@_item:nn #1#2
   {
     \exp_after:wN \@@_item:w
-    \@@_int_value:w \@@_int_eval:w #2 \exp_after:wN ;
-    \@@_int_value:w \@@_count:n {#1} ;
+    \int_value:w \@@_int_eval:w #2 \exp_after:wN ;
+    \int_value:w \@@_count:n {#1} ;
     #1 \q_stop
   }
 \cs_new:Npn \@@_item:w #1; #2;
@@ -1523,7 +1522,7 @@
           {
             \exp_after:wN \use_i_delimit_by_q_stop:nw
             \exp:w \exp_after:wN \@@_skip_exp_end:w
-              \@@_int_value:w \@@_int_eval:w #1 + #2 ;
+              \int_value:w \@@_int_eval:w #1 + #2 ;
           }
       }
       {
@@ -1562,12 +1561,12 @@
       \exp_after:wN \@@_skip_loop:wNNNNNNNN
     \else:
       \exp_after:wN \@@_skip_end:w
-      \@@_int_value:w \@@_int_eval:w
+      \int_value:w \@@_int_eval:w
     \fi:
     #1 ;
   }
 \cs_new:Npn \@@_skip_loop:wNNNNNNNN #1; #2#3#4#5#6#7#8#9
-  { \exp_after:wN \@@_skip_exp_end:w \@@_int_value:w \@@_int_eval:w #1 - 8 ; }
+  { \exp_after:wN \@@_skip_exp_end:w \int_value:w \@@_int_eval:w #1 - 8 ; }
 \cs_new:Npn \@@_skip_end:w #1 ;
   {
     \exp_after:wN \@@_skip_end:NNNNNNNN
@@ -1608,9 +1607,9 @@
 \cs_new:Npn \@@_range:nnn #1#2#3
   {
     \exp_after:wN \@@_range:w
-    \@@_int_value:w \@@_count:n {#1} \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w #2 - 1 \exp_after:wN ;
-    \@@_int_value:w \@@_int_eval:w #3 ;
+    \int_value:w \@@_count:n {#1} \exp_after:wN ;
+    \int_value:w \@@_int_eval:w #2 - 1 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w #3 ;
     #1 \q_stop
   }
 \cs_new:Npn \@@_range:w #1; #2; #3;
@@ -1622,7 +1621,7 @@
 \cs_new:Npn \@@_range:nnw #1#2
   {
     \exp_after:wN \@@_collect_delimit_by_q_stop:w
-    \@@_int_value:w \@@_int_eval:w #2 - #1 \exp_after:wN ;
+    \int_value:w \@@_int_eval:w #2 - #1 \exp_after:wN ;
     \exp:w \@@_skip_exp_end:w #1 ;
   }
 %    \end{macrocode}
@@ -1688,7 +1687,7 @@
 \cs_new:Npn \@@_collect_loop:wnNNNNNNN #1; #2 #3#4#5#6#7#8#9
   {
     \exp_after:wN \@@_collect_loop:wn
-    \@@_int_value:w \@@_int_eval:w #1 - 7 ;
+    \int_value:w \@@_int_eval:w #1 - 7 ;
     { #2 #3#4#5#6#7#8#9 }
   }
 \cs_new:Npn \@@_collect_end:wn #1 ;
