--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1355,13 +1355,12 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\@@_int_eval:w, \@@_int_to_roman:w, \@@_int_value:w}
+%   {\@@_int_eval:w, \@@_int_to_roman:w}
 %   Access to primitives: the code here uses the expansion behaviors for
 %   efficiency.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
 \cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
-\cs_new_eq:NN \@@_int_value:w \tex_number:D
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1382,14 +1381,14 @@
 \cs_new:Npn \char_generate:nn #1#2
   {
     \exp:w \exp_after:wN \@@_generate_aux:w
-      \@@_int_value:w \@@_int_eval:w #1 \exp_after:wN ;
-      \@@_int_value:w \@@_int_eval:w #2 ;
+      \int_value:w \@@_int_eval:w #1 \exp_after:wN ;
+      \int_value:w \@@_int_eval:w #2 ;
   }
 \cs_new:Npn \__kernel_char_generate:nn #1#2
   {
     \exp:w \exp_after:wN
       \@@_generate_aux:nnw \exp_after:wN
-        { \@@_int_value:w \@@_int_eval:w #1 } {#2} \exp_end:
+        { \int_value:w \@@_int_eval:w #1 } {#2} \exp_end:
   }
 %    \end{macrocode}
 %   Before doing any actual conversion, first some special case filtering.
